--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "node-fetch": "^2.6.1",
     "random": "^3.0.6",
     "winston": "^3.3.3"
+  },
+  "engine": {
+    "npm": "*",
+    "node": ">=12.0"
   }
 }
